cmake_minimum_required(VERSION 3.14)
project(CIS554)

set(CMAKE_CXX_STANDARD 17)

add_executable(CIS554 main.cpp cmake-build-debug/19spring_HW1.cpp)
add_executable(lc1 Lecture_1.cpp)
add_executable(lc2 Lecture_2.cpp)
add_executable(lc3 Lecture_3.cpp)
add_executable(lc4 Lecture_4.cpp)
add_executable(lc5 Lecture_5.cpp)
add_executable(lc7 Lecture_7.cpp)
add_executable(lc8 Lecture_8.cpp)
add_executable(lc9 Lecture_9.cpp)
add_executable(hw1 19Fall_HW1.cpp)
add_executable(hw2 19Fall_HW2.cpp)
add_executable(hw3 19Fall_HW3.cpp)
add_executable(hw4 19Fall_HW4.cpp)
add_executable(lc10 Lecture_10.cpp)